--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         : "Anhui University"
   pubmed           : 
   googlescholar    : "https://scholar.google.com.hk/citations?user=tIrNBaEAAAAJ&hl=zh-CN"
-  email            : "yess@mail.ustc.edu.cn or yess@ahu.edu.cn"
+  email            : "yess@mail.ustc.edu.cn"
   researchgate     : "https://www.researchgate.net/profile/Sheng-Ye-18"
   uri              : 
   bitbucket        :
