--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,14 +3,17 @@ main:
   - title: "Biography"
 #    url: "/zh-cn/#about-me"
 
+  - title: "News"
+#    url: "/zh-cn/#-ryjx"
+
+  - title: "Honor"
+#    url: "/zh-cn/#-ryjx"
+
   - title: "Research Profile"
 #    url: "/zh-cn/#-xl"
 
   - title: "Publications"
 #    url: "/zh-cn/#-lwzl"
-
-  - title: "Honor"
-#    url: "/zh-cn/#-ryjx"
 
   - title: "Academic Conference"
  #   url: "/zh-cn/#-xshy"
