--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Prof. Sheng Ye"
+title                    : "安徽大学叶盛教授"
 description              : "Professor of Physical Chemistry"
 repository               : "https://shengyess.github.io/"
 google_scholar_stats_use_cdn : false
